tests/sksl/errors/OpaqueTypeAssignment.glsl
### Compilation failed:

error: 2: opaque type 'sampler' cannot use initializer expressions
error: 4: assignments to opaque type 'sampler' are not permitted
2 errors
